A couple more figures

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1373,9 +1373,21 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/pc-loadings.png"))
 ```
 
+(ref:nodes-samples-comparison) Figure caption.
+
+```{r nodes-samples-comparison, fig.cap="(ref:nodes-samples-comparison)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/nodes-samples-comparison.png"))
+```
+
 ### Inference comparison
 
+```{r}
+time_taken <- readr::read_csv(paste0("resources/naomi-aghq/", resource_version, "/depends/time-taken.csv"))
+```
+
 ### Exceedance probabilities
+
+
 
 #### Meeting the second 90
 
@@ -1493,8 +1505,9 @@ The challenge of connecting this theory to nested use of any quadrature rule, li
 
 #### Exploration of the accuracy of INLA for complex models
 
-A universal INLA implementation could be used to assess the accuracy of INLA for a wider range of models.
-Among the ELGM-type structures of particular interest are aggregated Gaussian process models [@nandi2023disaggregation] and evidence synthesis models [@amoah2020geostatistical].
+The universal INLA implementation can be used to assess the accuracy of INLA for a wider range of models than were previously possible.
+An important benefit of using `TMB` is that comparisons to NUTS can easily be made using exactly the same model template.
+Among the ELGM-type structures of particular interest for spatial epidemiology are aggregated likelihood models and evidence synthesis models.
 
 #### Methods dissemination
 
