--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -314,6 +314,14 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/alpha_x.png"))
 ```
 
+## Use of PCA-AGHQ
+
+(ref:nodes-quantiles-sd) Figure caption.
+
+```{r nodes-quantiles-sd, fig.cap="(ref:nodes-quantiles-sd)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/nodes-quantiles-sd.png"))
+```
+
 ## Normalising constant estimation
 
 ## Inference comparison
