Colour palette note and some small fixes

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -76,7 +76,7 @@ condom_infections_averted <- 117 * 1e6
 vmmc_infections_averted <- 340 * 1e3
 ```
 
-(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa.
+(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. (The colour palette used in this figure, and throughout the thesis, is that of @okabe2008color. It is colourblind friendly, and the default in @wilke2019fundamentals.)
 
 ```{r overall-picture, fig.cap="(ref:overall-picture)"}
 knitr::include_graphics("figures/hiv-aids/overall-picture.png")
