--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -101,7 +101,7 @@ Table: (\#tab:survey-questions-ais-dhs) The behavioural survey questions include
 | $\texttt{sellsx12mo}$            | Had sex for money and/or gifts in the last 12 months.                       |
 | $\texttt{buysx12mo}$             | Paid money or given gifts for sex in the last 12 months.                    |
 
-Table: (\#tab:survey-questions-ais-dhs) The behavioural survey questions included in Population-Based HIV Impact Assessment (PHIA) surveys used to determine AGYW risk group membership.
+Table: (\#tab:survey-questions-phia) The behavioural survey questions included in Population-Based HIV Impact Assessment (PHIA) surveys used to determine AGYW risk group membership.
 
 ## Additional figures
 
