--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -5,6 +5,7 @@ You can alternatively view the [PDF version](https://athowes.github.io/thesis/ma
 The associated GitHub repository for this thesis is [`athowes/thesis`](https://github.com/athowes/thesis).
 For a concise introduction, see my thesis defense [slides](https://athowes.github.io/thesis/slides.pdf).
 You can also look at the [corrections](https://athowes.github.io/thesis/correct.pdf) for this thesis.
+If you notice typos or other issues, feel free to open an issue on GitHub, or submit a pull request.
 
 ## Acknowledgments {-}
 
