--- a/references.bib
+++ b/references.bib
@@ -1524,9 +1524,6 @@
   doi          = {10.1186/s12889-022-13451-y},
   isbn         = {1471-2458},
   url          = {https://doi.org/10.1186/s12889-022-13451-y},
-  date         = {2022/06/04},
-  date-added   = {2022-06-17 23:34:11 -0400},
-  date-modified = {2022-06-17 23:34:11 -0400},
   id           = {Nguyen2022},
   bdsk-url-1   = {https://doi.org/10.1186/s12889-022-13451-y}
 }
@@ -2474,3 +2471,18 @@
   journal={Model selection tutorials and talks},
   year={2020}
 }
+
+@online{okabe2008color,
+  author = {Okabe, Masataka and Ito, Kei},
+  title = {Color Universal Design (CUD): How to Make Figures and Presentations That Are Friendly to Colorblind People},
+  year = {2008},
+  url = {http://jfly.iam.u-tokyo.ac.jp/color/}
+}
+
+@book{wilke2019fundamentals,
+  title={Fundamentals of Data Visualization: A Primer on making informative and compelling figures},
+  author={Wilke, Claus O},
+  year={2019},
+  publisher={O'Reilly Media}
+}
+
