--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -1,7 +1,7 @@
 # Fast approximate Bayesian inference
 
 ```{r}
-resource_version <- "20231205-200840-0d6320ff"
+resource_version <- "20231206-143556-d6fbac86"
 ```
 
 ## Epilepsy example
@@ -312,6 +312,18 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 
 ```{r alpha-x, fig.cap="(ref:alpha-x)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/alpha_x.png"))
+```
+
+(ref:posterior-contraction) Figure caption.
+
+```{r posterior-contraction, fig.cap="(ref:posterior-contraction)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/posterior-contraction.png"))
+```
+
+(ref:nuts-hand-comparison) Figure caption.
+
+```{r nuts-hand-comparison, fig.cap="(ref:nuts-hand-comparison)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/nuts-hand-comparison.png"))
 ```
 
 ## Use of PCA-AGHQ
