--- a/references.bib
+++ b/references.bib
@@ -2486,3 +2486,21 @@
   publisher={O'Reilly Media}
 }
 
+@article{schad2021toward,
+  title={Toward a principled Bayesian workflow in cognitive science.},
+  author={Schad, Daniel J and Betancourt, Michael and Vasishth, Shravan},
+  journal={Psychological methods},
+  volume={26},
+  number={1},
+  pages={103},
+  year={2021},
+  publisher={American Psychological Association}
+}
+
+@article{unaids2014target,
+  title        = {{90-90-90. An ambitious treatment target to help end the AIDS epidemic}},
+  author       = {UNAIDS},
+  year         = 2014,
+  publisher    = {Geneva, Switzerland},
+  note         = {Accessed: December 2023}
+}
